# esi-taipy

./: .gitignore  README.md  agent.py  app.py  config.py  esi_agent_instruction.md  notes.md  pyproject.toml  requirements.txt  stui.py  todo.md  tools.py  ui.py
static/: styles.css
